@@ -1,6 +1,6 @@
 /*
  * IRIS -- Intelligent Roadway Information System
- * Copyright (C) 2007-2013  Minnesota Department of Transportation
+ * Copyright (C) 2007-2016  Minnesota Department of Transportation
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -14,13 +14,16 @@
  */
 package us.mn.state.dot.tms;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.Iterator;
-import java.util.LinkedList;
 import java.util.Set;
 import java.util.TreeMap;
 import us.mn.state.dot.geokit.Position;
+import us.mn.state.dot.geokit.SphericalMercatorPosition;
 import static us.mn.state.dot.tms.GeoLocHelper.distanceTo;
+import static us.mn.state.dot.tms.GeoLocHelper.segmentDistance;
 import us.mn.state.dot.tms.units.Distance;
 import static us.mn.state.dot.tms.units.Distance.Units.MILES;
 
@@ -29,14 +32,11 @@ import static us.mn.state.dot.tms.units.Distance.Units.MILES;
  *
  * @author Douglas Lau
  */
-public class CorridorBase implements Iterable<R_Node> {
+public class CorridorBase<T extends R_Node> implements Iterable<T> {
 
 	/** Adjustment for r_node milepoints falling on exact same spot */
 	static protected float calculateEpsilon(float v) {
-		if(v != 0)
-			return v * 0.0000001f;
-		else
-			return 0.0000001f;
+		return (v != 0) ? (v * 0.0000001f) : 0.0000001f;
 	}
 
 	/** Calculate the distance to another roadway node */
@@ -50,12 +50,12 @@ public class CorridorBase implements Iterable<R_Node> {
 	}
 
 	/** Check if the r_node location is valid */
-	static protected boolean hasLocation(R_Node n) {
+	static private boolean hasLocation(R_Node n) {
 		return !GeoLocHelper.isNull(n.getGeoLoc());
 	}
 
 	/** Corridor name */
-	protected final String name;
+	private final String name;
 
 	/** Get the corridor name */
 	public String getName() {
@@ -63,6 +63,7 @@ public class CorridorBase implements Iterable<R_Node> {
 	}
 
 	/** Get a string representation of the corridor */
+	@Override
 	public String toString() {
 		return name;
 	}
@@ -89,14 +90,14 @@ public class CorridorBase implements Iterable<R_Node> {
 	}
 
 	/** Set of unsorted roadway nodes */
-	protected final Set<R_Node> unsorted = new HashSet<R_Node>();
+	private final Set<T> unsorted = new HashSet<T>();
 
 	/** Roadway node list */
-	protected final LinkedList<R_Node> r_nodes = new LinkedList<R_Node>();
+	private final ArrayList<T> r_nodes = new ArrayList<T>();
 
 	/** Mapping from milepoint to r_node */
-	protected final TreeMap<Float, R_Node> n_points =
-		new TreeMap<Float, R_Node>();
+	protected final TreeMap<Float, T> n_points =
+		new TreeMap<Float, T>();
 
 	/** Create a new corridor */
 	public CorridorBase(GeoLoc loc) {
@@ -106,8 +107,8 @@ public class CorridorBase implements Iterable<R_Node> {
 	}
 
 	/** Add a roadway node to the corridor */
-	public void addNode(R_Node r_node) {
-		if(hasLocation(r_node) && !r_node.getAbandoned()) {
+	public void addNode(T r_node) {
+		if (hasLocation(r_node) && !r_node.getAbandoned()) {
 			unsorted.add(r_node);
 			unsorted.addAll(r_nodes);
 			r_nodes.clear();
@@ -116,7 +117,7 @@ public class CorridorBase implements Iterable<R_Node> {
 	}
 
 	/** Remove a roadway node from the corridor */
-	public void removeNode(R_Node r_node) {
+	public void removeNode(T r_node) {
 		unsorted.addAll(r_nodes);
 		unsorted.remove(r_node);
 		r_nodes.clear();
@@ -130,77 +131,79 @@ public class CorridorBase implements Iterable<R_Node> {
 	}
 
 	/** Sort the roadway nodes for the corridor */
-	protected void sortNodes() {
+	private void sortNodes() {
 		assert r_nodes.isEmpty();
 		beginList();
-		while(!unsorted.isEmpty())
+		while (!unsorted.isEmpty())
 			linkNearestNode();
-		if(isReversed())
-			reverseList();
+		if (isReversed())
+			Collections.reverse(r_nodes);
 	}
 
 	/** Put one r_node into the list */
-	protected void beginList() {
+	private void beginList() {
 		// Only way to get one Set element is to get iterator
-		Iterator<R_Node> it = unsorted.iterator();
-		if(it.hasNext()) {
+		Iterator<T> it = unsorted.iterator();
+		if (it.hasNext()) {
 			r_nodes.add(it.next());
 			it.remove();
 		}
 	}
 
 	/** Link the nearest node */
-	protected void linkNearestNode() {
-		R_Node first = r_nodes.getFirst();
-		R_Node last = r_nodes.getLast();
+	private void linkNearestNode() {
+		assert r_nodes.size() > 0;
+		T first = r_nodes.get(0);
+		T last = r_nodes.get(r_nodes.size() - 1);
 		NodeDistance fnear = findNearest(first);
 		NodeDistance lnear = findNearest(last);
-		if(fnear == null || lnear == null)
+		if (fnear == null || lnear == null)
 			unsorted.clear();
-		else if(fnear.meters < lnear.meters) {
-			r_nodes.addFirst(fnear.node);
+		else if (fnear.meters < lnear.meters) {
+			r_nodes.add(0, fnear.node);
 			unsorted.remove(fnear.node);
 		} else {
-			r_nodes.addLast(lnear.node);
+			r_nodes.add(lnear.node);
 			unsorted.remove(lnear.node);
 		}
 	}
 
 	/** Simple structure to hold a node and distance */
-	protected class NodeDistance {
-		protected final double meters;
-		protected final R_Node node;
-		public NodeDistance(Double m, R_Node n) {
+	private class NodeDistance {
+		private final double meters;
+		private final T node;
+		public NodeDistance(Double m, T n) {
 			meters = m;
 			node = n;
 		}
 	}
 
 	/** Find the nearest unsorted node to the given node */
-	protected NodeDistance findNearest(R_Node end) {
+	private NodeDistance findNearest(T end) {
 		NodeDistance near = null;
-		for(R_Node r_node: unsorted) {
+		for (T r_node: unsorted) {
 			Distance m = nodeDistance(r_node, end);
-			if(m != null && (near == null || m.m() < near.meters))
+			if (m != null && (near == null || m.m() < near.meters))
 				near = new NodeDistance(m.m(), r_node);
 		}
 		return near;
 	}
 
 	/** Check if the roadway nodes are in reverse order */
-	protected boolean isReversed() {
+	private boolean isReversed() {
 		return r_nodes.size() > 1 && !isUpstreamToDownstream();
 	}
 
 	/** Check if the nodes are in upstream-to-downstream order */
-	protected boolean isUpstreamToDownstream() {
-		R_Node first = r_nodes.getFirst();
-		R_Node last = r_nodes.getLast();
+	private boolean isUpstreamToDownstream() {
+		assert r_nodes.size() > 1;
+		T first = r_nodes.get(0);
+		T last = r_nodes.get(r_nodes.size() - 1);
 		Position pf = GeoLocHelper.getWgs84Position(first.getGeoLoc());
 		Position pl = GeoLocHelper.getWgs84Position(last.getGeoLoc());
-		if(pf == null || pl == null)
+		if (pf == null || pl == null)
 			return false;
-		switch(Direction.fromOrdinal(road_dir)) {
+		switch (Direction.fromOrdinal(road_dir)) {
 		case NORTH:
 			return pf.getLatitude() < pl.getLatitude();
 		case SOUTH:
@@ -219,27 +222,19 @@ public class CorridorBase implements Iterable<R_Node> {
 		return false;
 	}
 
-	/** Reverse the list of roadway nodes */
-	protected void reverseList() {
-		LinkedList<R_Node> tmp = new LinkedList<R_Node>(r_nodes);
-		r_nodes.clear();
-		for(R_Node r_node: tmp)
-			r_nodes.addFirst(r_node);
-	}
-
 	/** Calculate the mile points for all nodes on the corridor */
-	protected void calculateNodeMilePoints() {
+	private void calculateNodeMilePoints() {
 		assert n_points.isEmpty();
 		float miles = 0;
-		R_Node previous = null;
-		for(R_Node n: r_nodes) {
-			if(previous != null) {
+		T previous = null;
+		for (T n: r_nodes) {
+			if (previous != null) {
 				Distance m = nodeDistance(previous, n);
-				if(m == null)
+				if (m == null)
 					continue;
 				miles += m.asFloat(MILES);
 			}
-			while(n_points.containsKey(miles))
+			while (n_points.containsKey(miles))
 				miles += calculateEpsilon(miles);
 			n_points.put(miles, n);
 			previous = n;
@@ -250,68 +245,66 @@ public class CorridorBase implements Iterable<R_Node> {
 	 * @param loc Location to calculate.
 	 * @return Mile point for location, or null if no r_nodes exist. */
 	public Float calculateMilePoint(GeoLoc loc) {
-		if(n_points.isEmpty())
+		if (n_points.isEmpty())
 			return null;
-		R_Node nearest = null;
-		R_Node n_after = null;
+		T nearest = null;
+		T n_after = null;
 		float n_mile = 0;
 		double n_meters = 0;
-		for(Float mile: n_points.keySet()) {
-			R_Node n = n_points.get(mile);
+		for (Float mile: n_points.keySet()) {
+			T n = n_points.get(mile);
 			Distance m = nodeDistance(n, loc);
-			if(m != null) {
+			if (m != null) {
 				double ms = m.m();
-				if(nearest == null || ms < n_meters) {
+				if (nearest == null || ms < n_meters) {
 					nearest = n;
 					n_after = n;
 					n_mile = mile;
 					n_meters = ms;
-				} else if(n_after == nearest)
+				} else if (n_after == nearest)
 					n_after = n;
 			}
 		}
-		if(nearest == null || n_after == null)
+		if (nearest == null || n_after == null)
 			return null;
 		float mi = new Distance(n_meters).asFloat(MILES);
 		Distance m0 = nodeDistance(n_after, nearest);
 		Distance m1 = nodeDistance(n_after, loc);
-		if(m0 != null && m1 != null && m0.m() > m1.m())
+		if (m0 != null && m1 != null && m0.m() > m1.m())
 			return n_mile + mi;
 		else
 			return n_mile - mi;
 	}
 
 	/** Get the mile point for a specified node */
-	public Float getMilePoint(R_Node r_node) {
-		for(Float mile: n_points.keySet()) {
-			R_Node n = n_points.get(mile);
-			if(n == r_node)
+	public Float getMilePoint(T r_node) {
+		for (Float mile: n_points.keySet()) {
+			T n = n_points.get(mile);
+			if (n == r_node)
 				return mile;
 		}
 		return null;
 	}
 
 	/** Create a r_node iterator */
-	public Iterator<R_Node> iterator() {
+	@Override
+	public Iterator<T> iterator() {
 		return r_nodes.iterator();
 	}
 
 	/** Find the nearest node to the given location */
-	public R_Node findNearest(GeoLoc loc) {
+	public T findNearest(GeoLoc loc) {
 		Position pos = GeoLocHelper.getWgs84Position(loc);
-		if(pos != null)
-			return findNearest(pos);
-		else
-			return null;
+		return (pos != null) ? findNearest(pos) : null;
 	}
 
 	/** Find the nearest node to the given position */
-	public R_Node findNearest(Position pos) {
-		R_Node nearest = null;
+	public T findNearest(Position pos) {
+		T nearest = null;
 		double n_meters = 0;
-		for(R_Node n: r_nodes) {
+		for (T n: r_nodes) {
 			Distance m = distanceTo(n.getGeoLoc(), pos);
-			if(m != null && (nearest == null || m.m() < n_meters)) {
+			if (m != null && (nearest == null || m.m() < n_meters)) {
 				nearest = n;
 				n_meters = m.m();
 			}
@@ -320,14 +313,36 @@ public class CorridorBase implements Iterable<R_Node> {
 	}
 
 	/** Find the nearest node to the given location with given type */
-	public R_Node findNearest(Position pos, R_NodeType nt) {
-		R_Node nearest = null;
+	private T findNearest(Position pos, R_NodeType nt) {
+		T nearest = null;
 		double n_meters = 0;
-		for(R_Node n: r_nodes) {
-			if(n.getNodeType() != nt.ordinal())
+		for (T n: r_nodes) {
+			if (n.getNodeType() != nt.ordinal())
 				continue;
 			Distance m = distanceTo(n.getGeoLoc(), pos);
-			if(m != null && (nearest == null || m.m() < n_meters)) {
+			if (m != null && (nearest == null || m.m() < n_meters)) {
+				nearest = n;
+				n_meters = m.m();
+			}
+		}
+		return nearest;
+	}
+
+	/** Find the nearest node to the given location with given type.
+	 * @param pos Location to search.
+	 * @param nt Node type.
+	 * @param pickable Pickable flag.
+	 * @return Nearest matching node. */
+	public T findNearest(Position pos, R_NodeType nt, boolean pickable) {
+		T nearest = null;
+		double n_meters = 0;
+		for (T n: r_nodes) {
+			if (n.getNodeType() != nt.ordinal())
+				continue;
+			if (n.getPickable() != pickable)
+				continue;
+			Distance m = distanceTo(n.getGeoLoc(), pos);
+			if (m != null && (nearest == null || m.m() < n_meters)) {
 				nearest = n;
 				n_meters = m.m();
 			}
@@ -336,34 +351,34 @@ public class CorridorBase implements Iterable<R_Node> {
 	}
 
 	/** Fint the last node before the given location */
-	public R_Node findLastBefore(Position pos) {
-		R_Node nearest = null;
-		R_Node n_before = null;
-		R_Node n_after = null;
+	public T findLastBefore(Position pos) {
+		T nearest = null;
+		T n_before = null;
+		T n_after = null;
 		double n_meters = 0;
-		for(R_Node n: r_nodes) {
+		for (T n: r_nodes) {
 			Distance m = distanceTo(n.getGeoLoc(), pos);
-			if(m != null) {
+			if (m != null) {
 				double ms = m.m();
-				if(nearest == null || ms < n_meters) {
+				if (nearest == null || ms < n_meters) {
 					n_before = nearest;
 					nearest = n;
 					n_after = n;
 					n_meters = ms;
-				} else if(ms == n_meters) {
+				} else if (ms == n_meters) {
 					// coincident points
 					nearest = n;
 					n_after = n;
-				} else if(n_after == nearest)
+				} else if (n_after == nearest)
 					n_after = n;
 			}
 		}
-		if(nearest == null)
+		if (nearest == null)
 			return null;
 		GeoLoc ga = n_after.getGeoLoc();
 		Distance m0 = distanceTo(ga, nearest.getGeoLoc());
 		Distance m1 = distanceTo(ga, pos);
-		if(m0 != null && m1 != null && m0.m() > m1.m())
+		if (m0 != null && m1 != null && m0.m() > m1.m())
 			return nearest;
 		else
 			return n_before;
@@ -371,32 +386,141 @@ public class CorridorBase implements Iterable<R_Node> {
 
 	/** Get the lane configuration at the given location */
 	public LaneConfiguration laneConfiguration(Position pos) {
-		R_Node node = findLastBefore(pos);
-		if(node != null)
+		T node = findLastBefore(pos);
+		if (node != null)
 			return laneConfiguration(node);
 		else
 			return new LaneConfiguration(0, 0);
 	}
 
 	/** Get the lane configuration at the given node */
-	private LaneConfiguration laneConfiguration(R_Node node) {
+	private LaneConfiguration laneConfiguration(T node) {
 		int left = 0;
 		int right = 0;
-		for(R_Node n: r_nodes) {
-			if(n.getAttachSide())
+		for (T n: r_nodes) {
+			if (n.getAttachSide())
 				left = n.getShift();
 			else
 				right = n.getShift();
-			if(n.getNodeType() == R_NodeType.STATION.ordinal()) {
-				if(n.getAttachSide())
+			if (n.getNodeType() == R_NodeType.STATION.ordinal()) {
+				if (n.getAttachSide())
 					right = left + n.getLanes();
 				else
 					left = right - n.getLanes();
 			}
-			if(n == node)
+			if (n == node)
 				return new LaneConfiguration(left, right);
 		}
 		// Node not found on corridor
 		return new LaneConfiguration(0, 0);
+	}
+
+	/** Get the lane count a given location */
+	public int getLaneCount(LaneType lt, GeoLoc loc) {
+		Position pos = GeoLocHelper.getWgs84Position(loc);
+		if (pos == null)
+			return 0;
+		switch (lt) {
+		case EXIT:
+			R_Node n = findNearest(pos, R_NodeType.EXIT);
+			return (n != null) ? n.getLanes() : 0;
+		case MERGE:
+			R_Node mn = findNearest(pos, R_NodeType.ENTRANCE);
+			return (mn != null) ? mn.getLanes() : 0;
+		default:
+			return laneConfiguration(pos).getLanes();
+		}
+	}
+
+	/** Snap a point to the corridor.
+	 * @param smp Selected point (spherical mercator position).
+	 * @param lt Lane type (MAINLINE, EXIT, MERGE or CD_LANE).
+	 * @param max_dist Maximum distance to snap.
+	 * @return GeoLocDist snapped to corridor, or null if not found. */
+	public GeoLocDist snapGeoLoc(SphericalMercatorPosition smp, LaneType lt,
+		Distance max_dist)
+	{
+		switch (lt) {
+		case EXIT:
+		case MERGE:
+		case MAINLINE:
+		case CD_LANE:
+			if (checkLaneType(lt))
+				return snapGeoLoc2(smp, lt, max_dist);
+		}
+		return null;
+	}
+
+	/** Check if the road class matches a lane type */
+	private boolean checkLaneType(LaneType lt) {
+		RoadClass rc = RoadClass.fromOrdinal(roadway.getRClass());
+		boolean cd_cls = (rc == RoadClass.CD_ROAD);
+		boolean cd_typ = (lt == LaneType.CD_LANE);
+		return cd_cls == cd_typ;
+	}
+
+	/** Snap a point to the corridor.
+	 * @param smp Selected point (spherical mercator position).
+	 * @param max_dist Maximum distance to snap.
+	 * @return GeoLocDist snapped to corridor, or null if not found. */
+	private GeoLocDist snapGeoLoc2(SphericalMercatorPosition smp,
+		LaneType lt, Distance max_dist)
+	{
+		double dist = max_dist.m();
+		GeoLoc l0 = null;
+		GeoLoc l1 = null;
+		GeoLoc lp = null;	/* previous location */
+		T np = null;		/* previous node */
+		for (T n: r_nodes) {
+			if (R_NodeHelper.isContinuityBreak(n)) {
+				np = null;
+				lp = null;
+				continue;
+			}
+			GeoLoc l = n.getGeoLoc();
+			if ((lp != null) &&
+			   (!skipExit(lt, np)) &&
+			   (!skipEntrance(lt, n)))
+			{
+				double m = segmentDistance(lp, l, smp);
+				if (m < dist) {
+					l0 = lp;
+					l1 = l;
+					dist = m;
+				}
+			}
+			np = n;
+			lp = l;
+		}
+		if (l0 != null) {
+			GeoLoc loc = GeoLocHelper.snapSegment(l0, l1, smp);
+			if (loc != null)
+				return new GeoLocDist(loc, new Distance(dist));
+		}
+		return null;
+	}
+
+	/** Check if exit lane type should be skipped */
+	private boolean skipExit(LaneType lt, T n) {
+		return (n != null) &&
+		       (lt == LaneType.EXIT) &&
+		       !R_NodeHelper.isExit(n);
+	}
+
+	/** Check if entrance lane type should be skipped */
+	private boolean skipEntrance(LaneType lt, T n) {
+		assert (n != null);
+		return (lt == LaneType.MERGE) &&
+		       !R_NodeHelper.isEntrance(n);
+	}
+
+	/** GeoLoc / distance pair */
+	static public class GeoLocDist {
+		public final GeoLoc loc;
+		public final Distance dist;
+		private GeoLocDist(GeoLoc l, Distance d) {
+			loc = l;
+			dist = d;
+		}
 	}
 }
